tests/cases/standard-library/ok/std-vec-alloc-buffer.ari
fn main() -> i64 {
  var zone = zone::create(96);
  let data = std::vec::alloc_buffer<i64>(ref mut zone, 3);

  ptr_store(data, 11);
  ptr_store(ptr_add(data, 1), 13);
  ptr_store(ptr_add(data, 2), 17);

  let total = ptr_load(data) + ptr_load(ptr_add(data, 1)) + ptr_load(ptr_add(data, 2));
  zone::destroy(zone);
  return total;
}
